--- a/ncclientwindow.ui
+++ b/ncclientwindow.ui
@@ -140,7 +140,7 @@
         </widget>
        </item>
        <item>
-        <widget class="Phonon::VideoPlayer" name="videoPlayer">
+        <widget class="Phonon::VideoPlayer" name="videoPlayer" native="true">
          <property name="enabled">
           <bool>true</bool>
          </property>
@@ -249,7 +249,7 @@
         </widget>
        </item>
        <item>
-        <widget class="Phonon::VideoPlayer" name="videoPlayer_2">
+        <widget class="Phonon::VideoPlayer" name="videoPlayer_2" native="true">
          <property name="minimumSize">
           <size>
            <width>250</width>
